--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,3 +2,4 @@
 kafka_manager_user: kafka_manager
 kafka_manager_base_dir: /opt/kafka-manger
 kafka_manager_service: /etc/systemd/system/kafka-manager.service
+kafka_manager_repo: https://github.com/yahoo/kafka-manager.git
